[package]
name = "ytmp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures= "0.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
ctrlc = "3.1.7"
actix-files = "0.6.2"
